# opengl-scene-explorer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cpp-renderer/: CMakeLists.txt
cpp-renderer/src/: generator.cpp  generator.h  main.cpp
